<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

   <Button
       android:id="@+id/btn1"
       android:layout_width="150dp"
       android:layout_height="80dp"
       android:text="@string/pupular_movie"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn1"
        android:text="@string/stock_hawk"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn2"
        android:text="@string/build_it_bigger"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn3"
        android:text="@string/material"/>
    <Button
        android:id="@+id/btn5"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn4"
        android:text="@string/ubiquitous"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@id/btn5"
        android:text="@string/capstone"/>
</RelativeLayout>
